Fix issue with add input card(swapping between columns stuck the text where was that column

--- a/src/Components/Input/_Input.scss
+++ b/src/Components/Input/_Input.scss
@@ -21,6 +21,7 @@
 .Errors__submit {
   border: 1px solid tomato;
   border-left: none;
+  color: tomato;
 }
 .Errors__text {
   display: flex;
